--- a/contact.html
+++ b/contact.html
@@ -236,7 +236,7 @@ footer {
     <p>
         Adresse : 7 Henri Becquerel, 92500 Rueil-Malmaison<br>
         Téléphones : 07 83 52 16 27 / 06 85 21 74 98<br>
-        Emails : contact@upgrade-facilities.com / kamillekouka@upgrade-security.com
+        Emails : contact@upgrade-facilities.com / camillekouka@upgrade-security.com
     </p>
 
     <!-- MAP -->
@@ -297,3 +297,4 @@ hamburger.addEventListener('click', () => {
 
 </body>
 </html>
+
