--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@ body {
     line-height: 1.6;
 }
 
-/* ---------- Menu fixe ---------- */
+/* ---------- Menu ---------- */
 nav {
     position: fixed;
     top: 0;
@@ -26,30 +26,25 @@ nav {
 
 nav ul {
     margin: 0;
-    padding: 8px 20px; /* barre de nav plus compacte */
+    padding: 8px 20px;
     display: flex;
     justify-content: center;
     list-style: none;
     flex-wrap: wrap;
-    transition: max-height 0.3s ease;
     overflow: hidden;
 }
 
-nav ul li {
-    margin: 0 12px;
-}
+nav ul li { margin: 0 12px; }
 
 nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
     font-size: 15px;
-    transition: color 0.2s;
 }
 
 nav ul li a:hover { color: #ffd700; }
 
-/* Hamburger bouton */
 .hamburger {
     display: none;
     background: none;
@@ -74,14 +69,14 @@ header img.logo {
     margin-bottom: 25px;
 }
 
-/* ---------- Sections ---------- */
+/* ---------- Section ---------- */
 section {
     max-width: 1200px;
     margin: auto;
     padding: 60px 20px;
 }
 
-/* ---------- Contact Form ---------- */
+/* ---------- Contact ---------- */
 .contact-wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -93,36 +88,52 @@ section {
 }
 
 .contact-info {
-    flex: 1 1 300px;
+    flex: 1 1 320px;
 }
 
 .contact-info h2 {
     color: #0f2a44;
     font-size: 28px;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 
-.contact-info p {
+/* blocs infos */
+.info-block {
+    margin-bottom: 18px;
     font-size: 16px;
-    margin-bottom: 20px;
 }
 
-.contact-info .details {
-    font-size: 15px;
-    line-height: 1.5;
-}
-
-.contact-info .details a {
+.info-block strong {
+    display: block;
     color: #0f2a44;
+    margin-bottom: 4px;
+}
+
+.info-block a {
+    display: block;
+    color: #222;
     text-decoration: none;
+    margin-bottom: 4px;
 }
 
-.contact-info .details a:hover {
-    color: #ffd700;
+.info-block a:hover {
+    color: #0f2a44;
+    text-decoration: underline;
 }
 
+/* map */
+.contact-map {
+    margin-top: 25px;
+    height: 320px;
+    border-radius: 14px;
+    overflow: hidden;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.12);
+    border: 1px solid #e5e5e5;
+}
+
+/* ---------- Form ---------- */
 .contact-form {
-    flex: 1 1 300px;
+    flex: 1 1 320px;
 }
 
 .contact-form form {
@@ -133,7 +144,6 @@ section {
 
 .contact-form label {
     font-weight: bold;
-    margin-bottom: 5px;
     color: #0f2a44;
 }
 
@@ -143,20 +153,10 @@ section {
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 15px;
-    width: 100%;
-    box-sizing: border-box;
-    transition: border-color 0.3s;
-}
-
-.contact-form input:focus,
-.contact-form textarea:focus {
-    outline: none;
-    border-color: #0f2a44;
 }
 
 .contact-form textarea {
     min-height: 120px;
-    resize: vertical;
 }
 
 .contact-form button {
@@ -168,7 +168,6 @@ section {
     font-weight: bold;
     border-radius: 8px;
     cursor: pointer;
-    transition: background 0.3s;
 }
 
 .contact-form button:hover {
@@ -176,6 +175,7 @@ section {
     color: #0f2a44;
 }
 
+/* ---------- Footer ---------- */
 footer {
     background: #0f2a44;
     color: white;
@@ -195,11 +195,6 @@ footer {
     }
 
     nav ul.show { max-height: 500px; }
-
-    nav ul li {
-        margin: 10px 0;
-        text-align: center;
-    }
 
     .hamburger {
         display: block;
@@ -222,58 +217,57 @@ footer {
     </ul>
 </nav>
 
-<header id="accueil">
+<header>
     <img src="uf.png" alt="Upgrade Facilities" class="logo">
     <p>Des hommes et des femmes de métier, engagés pour votre performance</p>
 </header>
 
-<section id="contact">
+<section>
     <div class="contact-wrapper">
 
-        <!-- LEFT COLUMN : TEXT + INFO -->
-        <<div class="contact-info">
-    <h2>Restons en contact</h2>
-    <p>
-        Adresse : 7 Henri Becquerel, 92500 Rueil-Malmaison<br>
-        Téléphones : 07 83 52 16 27 / 06 85 21 74 98<br>
-        Emails : contact@upgrade-facilities.com / camillekouka@upgrade-security.com
-    </p>
+        <!-- INFOS -->
+        <div class="contact-info">
+            <h2>Restons en contact</h2>
 
-    <!-- MAP -->
-    <!-- MAP -->
-<div class="contact-map" style="margin-top:20px; height:300px; border-radius:12px; overflow:hidden;">
-    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.991434516175!2d2.178903815674307!3d48.87999837929043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e672d6b3c9b5ff%3A0x4e4eb8e15db4e2cf!2s7%20Rue%20Henri%20Becquerel%2C%2092500%20Rueil-Malmaison%2C%20France!5e0!3m2!1sfr!2sus!4v1706496000000!5m2!1sfr!2sus" 
-        width="100%" 
-        height="100%" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
-</div>
+            <div class="info-block">
+                <strong>📍 Adresse</strong>
+                7 Henri Becquerel, 92500 Rueil-Malmaison
+            </div>
 
-</div>
+            <div class="info-block">
+                <strong>📞 Téléphones</strong>
+                <a href="tel:0783521627">07 83 52 16 27</a>
+                <a href="tel:0685217498">06 85 21 74 98</a>
+            </div>
 
+            <div class="info-block">
+                <strong>✉️ Emails</strong>
+                <a href="mailto:contact@upgrade-facilities.com">contact@upgrade-facilities.com</a>
+                <a href="mailto:kamillekouka@upgrade-security.com">kamillekouka@upgrade-security.com</a>
+            </div>
 
+            <div class="contact-map">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.991434516175!2d2.178903815674307!3d48.87999837929043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e672d6b3c9b5ff%3A0x4e4eb8e15db4e2cf!2s7%20Rue%20Henri%20Becquerel%2C%2092500%20Rueil-Malmaison%2C%20France!5e0!3m2!1sfr!2sus!4v1706496000000!5m2!1sfr!2sus"
+                    width="100%" height="100%" style="border:0;" loading="lazy">
+                </iframe>
+            </div>
+        </div>
 
-
-        <!-- RIGHT COLUMN : FORM -->
+        <!-- FORM -->
         <div class="contact-form">
             <form action="https://formspree.io/f/xbdyradq" method="POST">
                 <label>Prénom</label>
-                <input type="text" name="prenom" placeholder="Votre prénom">
+                <input type="text" name="prenom">
 
-                <label>Nom de famille</label>
-                <input type="text" name="nom" placeholder="Votre nom">
+                <label>Nom</label>
+                <input type="text" name="nom">
 
-                <label>E-mail *</label>
-                <input type="email" name="email" placeholder="Votre email" required>
-
-                <input type="hidden" name="_subject" value="Nouveau message – Site Upgrade Facilities">
+                <label>Email *</label>
+                <input type="email" name="email" required>
 
                 <label>Message</label>
-                <textarea name="message" placeholder="Votre message" required></textarea>
+                <textarea name="message" required></textarea>
 
                 <button type="submit">Envoyer</button>
             </form>
@@ -297,4 +291,3 @@ hamburger.addEventListener('click', () => {
 
 </body>
 </html>
-
