--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-/* ---------- Styles globaux ---------- */
+
+/* ---------- GLOBAL ---------- */
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -17,24 +18,23 @@ body {
 
 ul { padding-left: 20px; }
 
-/* ---------- Menu fixe ---------- */
+/* ---------- MENU ---------- */
 nav {
     position: fixed;
     top: 0;
     width: 100%;
     background: #0f2a44;
     z-index: 1000;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 10px rgba(0,0,0,0.15);
 }
 
 nav ul {
     margin: 0;
-    padding: 8px 20px;
+    padding: 10px 20px;
     display: flex;
     justify-content: center;
     list-style: none;
     flex-wrap: wrap;
-    transition: max-height 0.3s ease;
     overflow: hidden;
 }
 
@@ -45,7 +45,6 @@ nav ul li a {
     text-decoration: none;
     font-weight: bold;
     font-size: 15px;
-    transition: color 0.2s;
 }
 
 nav ul li a:hover { color: #ffd700; }
@@ -54,42 +53,45 @@ nav ul li a:hover { color: #ffd700; }
     display: none;
     background: none;
     border: none;
-    font-size: 24px;
+    font-size: 26px;
     color: white;
     cursor: pointer;
     padding: 10px 15px;
 }
 
-/* ---------- Header ---------- */
+/* ---------- HEADER ---------- */
 header {
     background: #0f2a44;
     color: white;
     padding: 100px 20px 60px;
     text-align: center;
-    position: relative;
 }
 
-header h1 { margin: 0; font-size: 38px; }
-header p { margin-top: 15px; font-size: 18px; max-width: 800px; margin-left: auto; margin-right: auto; }
+.logo {
+    max-width: 420px;
+    width: 90%;
+    margin-bottom: 25px;
+}
 
-.logo { max-width: 420px; width: 90%; margin-bottom: 25px; }
+header p {
+    font-size: 18px;
+    max-width: 800px;
+    margin: auto;
+}
 
-/* ---------- Sections ---------- */
-section { max-width: 1200px; margin: auto; padding: 60px 20px; }
+/* ---------- SECTIONS ---------- */
+section {
+    max-width: 1200px;
+    margin: auto;
+    padding: 60px 20px;
+}
 
-/* ---------- Boxes ---------- */
 .box {
     background: white;
     padding: 40px 30px;
     margin-bottom: 50px;
-    border-radius: 12px;
-    box-shadow: 0 6px 20px rgba(0,0,0,0.08);
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.box:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+    border-radius: 14px;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.08);
 }
 
 h2 {
@@ -99,91 +101,55 @@ h2 {
     position: relative;
 }
 
-h2::before {
+h2::after {
     content: "";
-    position: absolute;
-    left: 0;
-    bottom: -10px;
     width: 60px;
     height: 4px;
     background: #ffd700;
+    display: block;
+    margin-top: 10px;
     border-radius: 2px;
 }
 
-/* ---------- Timeline graphique ---------- */
+/* ---------- TIMELINE ---------- */
 .timeline {
     position: relative;
-    margin-left: 10px;
-    padding-left: 35px;
-    border-left: 4px solid #0f2a44;
+    margin-left: 20px;
+    padding-left: 40px;
+    border-left: 3px solid #0f2a44;
 }
 
 .timeline-step {
     position: relative;
     margin-bottom: 35px;
-    padding-left: 5px;
 }
 
 .timeline-step::before {
     content: "";
     position: absolute;
-    left: -41px;
+    left: -52px;
     top: 6px;
-    width: 14px;
-    height: 14px;
+    width: 16px;
+    height: 16px;
     background: #ffd700;
     border-radius: 50%;
-    border: 3px solid #0f2a44;
+    border: 4px solid #0f2a44;
 }
 
 .timeline-step strong {
     display: block;
-    margin-bottom: 6px;
-    color: #0f2a44;
     font-size: 18px;
-    letter-spacing: 0.3px;
+    color: #0f2a44;
+    margin-bottom: 6px;
 }
 
 .timeline-step p {
     margin: 0;
     font-size: 16px;
-    color: #333;
+    color: #444;
 }
 
-
-/* ---------- Activités et Réalisations ---------- */
-.activities, .realisations {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-}
-
-.activity-card, .realisations-card {
-    background: #fff;
-    border-radius: 12px;
-    box-shadow: 0 5px 18px rgba(0,0,0,0.08);
-    flex: 1 1 45%;
-    max-width: 500px;
-    min-height: 220px;
-    padding: 25px;
-    text-align: center;
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.activity-card:hover, .realisations-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 25px rgba(0,0,0,0.12);
-}
-
-.activity-card img, .realisations-card img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 15px;
-}
-
-/* ---------- Footer ---------- */
+/* ---------- FOOTER ---------- */
 footer {
     background: #0f2a44;
     color: white;
@@ -192,27 +158,56 @@ footer {
     font-size: 14px;
 }
 
-/* ---------- Responsive ---------- */
-@media (max-width: 1024px) {
-    .activity-card, .realisations-card { flex: 1 1 48%; min-height: 200px; }
-}
-
+/* ---------- MOBILE ---------- */
 @media (max-width: 768px) {
-    .activity-card, .realisations-card { flex: 1 1 100%; min-height: auto; }
-    header { padding: 60px 15px 30px; }
-    h2 { font-size: 26px; }
-    p, li { font-size: 15px; }
-    nav ul { flex-direction: column; max-height: 0; }
+
+    nav ul {
+        flex-direction: column;
+        max-height: 0;
+    }
+
     nav ul.show { max-height: 500px; }
-    nav ul li { margin: 10px 0; text-align: center; }
-    .hamburger { display: block; position: absolute; right: 20px; top: 10px; }
+
+    nav ul li {
+        margin: 12px 0;
+        text-align: center;
+    }
+
+    .hamburger {
+        display: block;
+        position: absolute;
+        right: 20px;
+        top: 10px;
+    }
+
+    header {
+        padding: 70px 15px 40px;
+    }
+
+    h2 {
+        font-size: 26px;
+    }
+
+    /* Timeline version mobile */
+    .timeline {
+        border-left: none;
+        padding-left: 0;
+        margin-left: 0;
+    }
+
+    .timeline-step {
+        background: #f8f9fb;
+        border-radius: 12px;
+        padding: 20px;
+        margin-bottom: 20px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+    }
+
+    .timeline-step::before {
+        display: none;
+    }
 }
 
-@media (max-width: 480px) {
-    header h1 { font-size: 26px; }
-    header p { font-size: 14px; }
-    nav ul li a { font-size: 14px; }
-}
 </style>
 </head>
 
@@ -227,80 +222,73 @@ footer {
     </ul>
 </nav>
 
-<header id="accueil">
-    <img src="uf.png" alt="Upgrade Facilities" class="logo">
+<header>
+    <img src="uf.png" class="logo" alt="Upgrade Facilities">
     <p>Des hommes et des femmes de métier, engagés pour votre performance</p>
 </header>
 
 <section>
-    <!-- Timeline histoire -->
-    <div class="box" id="histoire">
-        <h2>Notre Histoire et Notre Mission</h2>
-        <div class="timeline">
-    <div class="timeline-step">
-        <strong>Fondation</strong>
-        <p>Création d'une entreprise familiale avec des valeurs fortes.</p>
-    </div>
 
-    <div class="timeline-step">
-        <strong>Développement</strong>
-        <p>Expansion des services et acquisition d'expertise.</p>
-    </div>
-
-    <div class="timeline-step">
-        <strong>Innovation</strong>
-        <p>Adoption de pratiques durables et responsables.</p>
-    </div>
-
-    <div class="timeline-step">
-        <strong>Aujourd'hui</strong>
-        <p>Partenaire de confiance pour de grandes entreprises.</p>
+<div class="box">
+    <h2>Notre Histoire et Notre Mission</h2>
+    <div class="timeline">
+        <div class="timeline-step">
+            <strong>Fondation</strong>
+            <p>Création d'une entreprise familiale avec des valeurs fortes.</p>
+        </div>
+        <div class="timeline-step">
+            <strong>Développement</strong>
+            <p>Expansion des services et acquisition d'expertise.</p>
+        </div>
+        <div class="timeline-step">
+            <strong>Innovation</strong>
+            <p>Adoption de pratiques durables et responsables.</p>
+        </div>
+        <div class="timeline-step">
+            <strong>Aujourd'hui</strong>
+            <p>Partenaire de confiance pour de grandes entreprises.</p>
+        </div>
     </div>
 </div>
 
-    </div>
+<div class="box">
+    <h2>L’excellence et la responsabilité au cœur de notre métier</h2>
+    <p>
+        Upgrade Facilities est une entreprise familiale spécialisée dans l’ensemble des corps d’état du bâtiment.
+        Elle propose des solutions sur mesure, parfaitement adaptées aux besoins spécifiques de chaque client,
+        en s’appuyant sur une équipe expérimentée et un engagement fort en faveur d’un entrepreneuriat responsable.
+    </p>
+</div>
 
-    <!-- Excellence -->
-    <div class="box">
-        <h2>L’excellence et la responsabilité au cœur de notre métier</h2>
-        <p>
-            Upgrade Facilities est une entreprise familiale spécialisée dans l’ensemble des corps d’état du bâtiment.
-            Elle propose des solutions sur mesure, parfaitement adaptées aux besoins spécifiques de chaque client,
-            en s’appuyant sur une équipe expérimentée et un engagement fort en faveur d’un entrepreneuriat responsable.
-        </p>
-    </div>
+<div class="box">
+    <h2>Notre Engagement pour un Avenir Durable</h2>
+    <ul>
+        <li><strong>Respect Environnemental :</strong> Utilisation systématique de produits et matériaux écologiques.</li>
+        <li><strong>Équilibre Professionnel :</strong> Organisation favorisant bien-être et efficacité.</li>
+        <li><strong>Sécurité Prioritaire :</strong> Prévention et formation continue.</li>
+    </ul>
+</div>
 
-    <!-- Engagement -->
-    <div class="box" id="engagement">
-        <h2>Notre Engagement pour un Avenir Durable</h2>
-        <ul>
-            <li><strong>Respect Environnemental :</strong> Utilisation systématique de produits et matériaux écologiques pour réduire notre impact sur l'environnement et promouvoir des pratiques durables.</li>
-            <li><strong>Équilibre Professionnel :</strong> Politique d'horaires adaptée pour favoriser l'harmonie entre vie professionnelle et personnelle de nos employés, garantissant bien-être et efficacité.</li>
-            <li><strong>Sécurité Prioritaire :</strong> Actions de prévention et formation continue pour réduire les risques d'accidents et assurer un environnement de travail sécurisé pour tous.</li>
-        </ul>
-    </div>
+<div class="box">
+    <h2>Nos valeurs fondamentales</h2>
+    <ul>
+        <li>Proximité et confiance</li>
+        <li>Innovation continue</li>
+        <li>Qualité professionnelle</li>
+        <li>Engagement sociétal</li>
+    </ul>
+</div>
 
-    <!-- Valeurs -->
-    <div class="box" id="valeurs">
-        <h2>Nos valeurs fondamentales</h2>
-        <ul>
-            <li>Proximité et confiance</li>
-            <li>Innovation continue</li>
-            <li>Qualité professionnelle</li>
-            <li>Engagement sociétal</li>
-        </ul>
-    </div>
+<div class="box">
+    <h2>Notre Marché et Nos Services</h2>
+    <ul>
+        <li><strong>Grandes Entreprises :</strong> Services sur mesure</li>
+        <li><strong>Gestionnaires d’Immeubles :</strong> Entretien et rénovation</li>
+        <li><strong>Travaux Tous Corps d'État :</strong> Sols, murs, menuiserie, plâtrerie</li>
+        <li><strong>Nettoyage Professionnel :</strong> Entretien courant et périodique</li>
+    </ul>
+</div>
 
-    <!-- Marché et services -->
-    <div class="box" id="marche">
-        <h2>Notre Marché et Nos Services</h2>
-        <ul>
-            <li><strong>Grandes Entreprises :</strong> Services adaptés aux besoins spécifiques des corporations</li>
-            <li><strong>Gestionnaires d’Immeubles :</strong> Solutions complètes pour l'entretien et la rénovation</li>
-            <li><strong>Travaux Tous Corps d'État :</strong> Revêtements muraux, revêtements de sol, installation de chantier, menuiserie, plâtrerie...</li>
-            <li><strong>Nettoyage Professionnel :</strong> Entretien courant et périodique des espaces</li>
-        </ul>
-    </div>
 </section>
 
 <footer>
