Refactor contact.html structure and styles

--- a/contact.html
+++ b/contact.html
@@ -213,7 +213,7 @@ footer {
     <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="activite.html">Activité</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html">Contacts</a></li>
     </ul>
 </nav>
 
@@ -243,7 +243,7 @@ footer {
             <div class="info-block">
                 <strong>✉️ Emails</strong>
                 <a href="mailto:contact@upgrade-facilities.com">contact@upgrade-facilities.com</a>
-                <a href="mailto:kamillekouka@upgrade-security.com">kamillekouka@upgrade-security.com</a>
+                <a href="mailto:kamillekouka@upgrade-security.com">camillekouka@upgrade-security.com</a>
             </div>
 
             <div class="contact-map">
@@ -291,3 +291,4 @@ hamburger.addEventListener('click', () => {
 
 </body>
 </html>
+
