--- a/activite.html
+++ b/activite.html
@@ -227,7 +227,7 @@ footer {
     <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="activite.html">Activité</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html">Contacts</a></li>
     </ul>
 </nav>
 
@@ -305,3 +305,4 @@ hamburger.addEventListener('click', () => {
 
 </body>
 </html>
+
