--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ footer {
     <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="activite.html">Activité</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html">Contacts</a></li>
     </ul>
 </nav>
 
@@ -306,3 +306,4 @@ hamburger.addEventListener('click', () => {
 
 </body>
 </html>
+
